AM_CPPFLAGS = -I$(top_srcdir)/include
LDADD = $(top_builddir)/src/libsylvan.la

check_PROGRAMS = \
	t001_snladd t002_snlsub t003_snlmul t004_snldiv t005_snlmod \
	t006_snlgcd t007_snllcm t008_snlmax t009_snlmin \
	t011_snadd t012_snsub t013_snmul t014_sndiv t015_snmod \
	t016_sngcd t017_snlcm t018_snmax t019_snmin \
	t021_skladd t022_sklsub t023_sklmul t024_skldiv \
	t025_snlpow \
	t028_snlabs t029_snlsgn \
	t031_skadd t032_sksub t033_skmul t034_skdiv \
	t035_snpow \
	t038_snabs t039_snsgn \
	t041_snzadd t042_snzsub t043_snzmul t044_snzdiv t045_snzmod \
	t046_snzgcd t047_snzlcm t048_snzmax t049_snzmin \
	t051_skzadd t053_skzmul t054_skzdiv \
	t055_snzpow \
	t059_snzsgn \
	t061_snqadd t062_snqsub t063_snqmul t064_snqdiv t065_snqmod \
	t066_snqgcd t067_snqlcm t068_snqmax t069_snqmin \
	t071_skqadd t073_skqmul t074_skqdiv \
	t075_snqpow \
	t079_snqsgn \
	t081_snuadd t082_snusub t083_snumul t084_snudiv t085_snumod \
	t086_snugcd t087_snulcm t088_snumax t089_snumin \
	t091_skuadd t093_skumul t094_skudiv \
	t095_snupow \
	t099_snusgn \
	t101_sntok \
	t102_sna2l t103_sna2i \
	t104_snuc2c \
	t108_snqt t109_snunqt \
	t111_snl2i t112_snq2u t113_snu2uc \
	t121_snrev \
	t133_snlnml \
	t191_sneset \
	t201_snget

TESTS = $(check_PROGRAMS)
