AM_CPPFLAGS = -I$(top_srcdir)/include
LDADD = $(top_builddir)/src/libsylvan.la

check_PROGRAMS = \
	t001_snladd t002_snlsub t003_snlmul t004_snldiv t005_snlmod \
	t006_skladd t007_sklsub t008_sklmul t009_snlnml \
	t011_snlmax t012_snlmin t013_snlabs t014_snlcmp t015_snlsgn \
	t016_snlgcd t017_snllcm \
	t021_snlbop t022_snland t023_snlor t024_snlxor t025_snlnot \
	t026_snlshl t027_snlshr t028_snlmsb \
	t031_snlpow \
	t041_sna2l t042_snl2i \
	t051_snadd t052_snsub t053_snmul t054_sndiv t055_snmod \
	t056_skadd t057_sksub t058_skmul t059_snnml \
	t061_snmax t062_snmin t063_snabs t064_sncmp t065_snsgn \
	t066_sngcd t067_snlcm \
	t071_snbop t072_snand t073_snor  t074_snxor t075_snnot \
	t076_snshl t077_snshr t078_snmsb \
	t081_snpow \
	t091_sna2i \
	t101_snzadd t102_snzsub t103_snzmul t104_snzdiv t105_snzmod \
	t106_skzadd t108_skzmul \
	t111_snzmax t112_snzmin t114_snzcmp t115_snzsgn \
	t116_snzgcd t117_snzlcm \
	t121_snzbop t122_snzand t123_snzor t124_snzxor t125_snznot \
	t126_snzshl t127_snzshr t128_snzmsb \
	t131_snzpow \
	t151_snqadd t152_snqsub t153_snqmul t154_snqdiv t155_snqmod \
	t156_skqadd t158_skqmul \
	t161_snqmax t162_snqmin t164_snqcmp t165_snqsgn \
	t166_snqgcd t167_snqlcm \
	t176_snqshl t177_snqshr t178_snqmsb \
	t181_snqpow \
	t192_snq2u \
	t201_snuadd t202_snusub t203_snumul t204_snudiv t205_snumod \
	t206_skuadd t208_skumul \
	t211_snumax t212_snumin t214_snucmp t215_snusgn \
	t216_snugcd t217_snulcm \
	t226_snushl t227_snushr t228_snumsb \
	t231_snupow \
	t242_snu2uc \
	t301_sntok t302_snrev t303_snuc2c t304_snqt t305_snunqt \
	t401_snrbts \
	t501_snget \
	t901_sneset

TESTS = $(check_PROGRAMS)
